--- a/css/style.css
+++ b/css/style.css
@@ -240,3 +240,26 @@
   background-size: cover;
   background-position: no-repeat;
   background-repeat: center; }
+
+.error {
+  width: 100%;
+  min-height: 100vh;
+  background-image: linear-gradient(125deg, #488281, #ee8967);
+  position: absolute;
+  top: 50%;
+  text-align: center;
+  transform: translateY(-50%); }
+  .error__text {
+    color: #343434;
+    transform: translateY(50%); }
+  .error__titulo {
+    font-size: 160px;
+    font-family: "montserrat",sans-serif;
+    margin: 0;
+    font-weight: 900;
+    letter-spacing: 20px;
+    background: url(../images/webdesign.jpg) center no-repeat;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text; }
+  .error__link {
+    color: white; }
